--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "Kestrel": {
     "Endpoints": {
       "Https": {
-        "Url": "https://localhost:5000",
+        "Url": "https://*:5000",
         "Certificate": {
           "Path": "certificate.pfx",
           "Password": "test1234"
